--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>company-portfolio</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="logo-name ">
+            <a href="./index.html\"></a>
+                <img src="https://info.coderacademy.edu.au/hs-fs/hubfs/CODR_Logo_Black___Green_RGB.png?width=389&height=86&name=CODR_Logo_Black___Green_RGB.png"
+                alt="Coder Academy Logo">
+            </a>
+            <p class="name">
+                <span class="coder-text">Coder</span>
+                <span class="academy-text">Academy</span>
+        <nav id="nav-items">
+            <a href="./index.html">Home</a>
+            <a href="./about">About</a>
+            <a href="./contact">Contact</a>
+        </nav>        
+
+    </header>
     <main></main>
     <footer></footer>
 </body>
