--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <span class="academy-text">Academy</span>
         <nav id="nav-items">
             <a href="./index.html">Home</a>
-            <a href="./about">About</a>
-            <a href="./contact">Contact</a>
+            <a href="./pages/about">About</a>
+            <a href="./pages/contact">Contact</a>
         </nav>        
 
     </header>
